# minigolf-bot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  level1.json  pyproject.toml
.github/workflows/: ci.yaml
scripts/: install.sh
src/minigolf/: components.py  constants.py  consts.py  editor.py  entity.py  game.py  joseph_code.py  levels.py  main.py  objects.py  observation.py  utils.py  world.py
src/minigolf/controllers/: __init__.py  base.py  random.py  sequence.py
src/minigolf/editor/: actions.py  consts.py  draw.py  files.py  grid.py  main.py  state.py  ui.py
src/minigolf/game/: engine.py  levels.py  main.py  state.py
src/minigolf/systems/: collision.py  control.py  movement.py  physics.py  rendering.py  turn.py  win.py
src/minigolf/systems/agents/: BruteForceAgent.py  DefaultMovesAgent.py
tests/: level1.json  test_level_loading.py  test_objects.py  test_rendering.py  test_win.py
