[project]
name = "minigolf-bot"
version = "0.1.0"
description = "Epic minigolf solver"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pygame>=2.6.1"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
minigolf = "minigolf.main:main"

[dependency-groups]
dev = ["pre-commit>=4.2.0", "ruff>=0.12.7"]
