[project]
name = "minigolf-bot"
version = "0.1.0"
description = "Epic minigolf solver"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pygame>=2.6.1",
    "pymunk>=7.1.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
minigolf = "minigolf.main:cli"

[tool.uv]
package = true

[dependency-groups]
dev = ["pre-commit>=4.2.0", "ruff>=0.12.7"]
